<resources>
    <string name="app_name">Genuine SMS Forwarder</string>

    <string name="shared_pref_name">in.codingloop.smsforwarder.sms_forwarder</string>
    <string name="shared_pref_contacts">contacts</string>
    <string name="shared_pref_fwd_type">forward_type</string>
    <string name="shared_pref_words_to_ignore">words_to_ignore</string>

    <string name="fwd_type_whatsapp">Whatsapp</string>
    <string name="fwd_type_sms">SMS</string>
    <string name="fwd_type_both">Both</string>
    <string name="tv_fwd_through_msg">Forward SMS through:</string>
    <string name="tv_long_press_s1">Long press to edit</string>
    <string name="tv_long_press_s2">Long press to save</string>
    <string name="btn_action_add">Add</string>
    <string name="btn_action_delete">Delete</string>

    <string name="hint_for_extension">Ext <font color='#FF0000'>*</font></string>
    <string name="hint_for_contacts">Enter contact number <font color='#FF0000'>*</font></string>
    <string name="hint_for_blocked_sender">Enter sender name to block</string>
    <string name="d_cc_default_extension">+91</string>
    <string name="hint_for_max_limit">Daily maximum forwards (optional)</string>
    <string name="menu_i1_add_contact">Add contact</string>
    <string name="menu_i2_block_user">Block sender</string>
    <string name="d_sb_rb_1_exact_match">Exact match</string>
    <string name="d_sb_rb_1_part_match">Partial match</string>
    <string name="d_sb_hint_sender_to_block">Enter sender name to block</string>

    <string-array name="tab_titles">
        <item>Contacts</item>
        <item>Blocked Senders</item>
    </string-array>

</resources>