<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/d_sb_hint_sender_to_block"
        android:id="@+id/d_block_user_e1"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/d_sb_ti_sender_to_block"
            android:maxLength="30"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/d_sb_rg_block_type"
        android:checkedButton="@id/d_sb_mrb_part_match"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/d_sb_mrb_exact_match"
            android:text="@string/d_sb_rb_1_exact_match"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/d_sb_mrb_part_match"
            android:text="@string/d_sb_rb_1_part_match"
            />

    </RadioGroup>

</LinearLayout>