<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            android:hint="@string/hint_for_extension"
            android:id="@+id/d_create_contact_extension"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d_cc_default_extension"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            android:hint="@string/hint_for_contacts"
            android:id="@+id/d_create_contact_no"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="12"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/hint_for_max_limit"-->
<!--        app:boxBackgroundColor="@android:color/transparent"-->
<!--        android:background="@android:color/transparent"-->
<!--        >-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="number"-->
<!--            android:maxLines="1"-->
<!--            android:maxLength="3"-->
<!--            android:enabled="false"-->
<!--            />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

</LinearLayout>